@@ -1,3 +1,9 @@
+Tue Jan 13 12:55:58 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: In _get_eterms with an non-indexed
+	  document, ensure that the document ID is set back to its original
+	  value even if an exception happens in doc.prepare().
+
 Mon Jan 12 15:08:09 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* utils/make_xappy_tarballs: Include swig in the export.  Remove
